--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,11 @@
+/* @media screen and (min-width: 768px) {
+ 
+}
+
+@media screen and (min-width: 1200px) {
+  
+} */
+
 :root {
   /* fons */
   --primary-fons: 'Roboto', sans-serif;
@@ -79,17 +87,33 @@ button {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-
+.section {
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
+}
 .conteiner {
-  width: 1158px;
+  min-width: 320px;
+  max-width: 428px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
 }
-.section {
-  padding-top: 120px;
-  padding-bottom: 120px;
+@media screen and (min-width: 768px) {
+  .conteiner {
+    max-width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .conteiner {
+    max-width: 1158px;
+  }
 }
 
 body {
@@ -296,36 +320,75 @@ body {
 
 .features-section-list {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 24px;
+  gap: 72px;
 }
 .feature-item {
-  width: 264px;
+  width: 396px;
 }
 
+@media screen and (min-width: 768px) {
+  .features-section-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap: 24px;
+  }
+  .feature-item {
+    width: 356px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .features-section-list {
+    display: flex;
+
+    align-items: center;
+    justify-content: center;
+    gap: 24px;
+  }
+  .feature-item {
+    width: 264px;
+  }
+}
 .features-list-icon {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 264px;
-  height: 112px;
-  margin-bottom: 8px;
-  background-color: var(--features-list-icon-background);
-  border-radius: 4px;
+  display: none;
+}
+@media screen and (min-width: 1200px) {
+  .features-list-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 264px;
+    height: 112px;
+    margin-bottom: 8px;
+    background-color: var(--features-list-icon-background);
+    border-radius: 4px;
+  }
 }
 
 /* Work section */
-
-.work-section-list {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  column-gap: 24px;
+.work-section {
+  display: none;
 }
-/* .work-item {
-  flex-basis: calc((100%-48px) / 3);
-} */
+@media screen and (min-width: 1200px) {
+  .work-section {
+    display: block;
+  }
+  .work-section-list {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    column-gap: 24px;
+  }
+  /* .work-item {
+    flex-basis: calc((100%-48px) / 3);
+  } */
+}
 
 /* Team section */
 
