--- a/styles/styles.css
+++ b/styles/styles.css
@@ -495,17 +495,13 @@ body {
     width: 168px;
   }
 }
-@media screen and (max-width: 767.99px) {
+@media screen and (min-width: 768px) {
   .customers-list {
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
-    padding: 0;
     column-gap: 24px;
     row-gap: 72px;
-    margin: auto;
-  }
-  .customers-item {
-    flex-basis: calc((100% - 48px) / 3);
   }
 }
 @media screen and (min-width: 1200px) {
@@ -552,14 +548,25 @@ body {
     padding-bottom: 100px;
   }
 }
-
-.footer-wrapper {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 72px;
+@media screen and (max-width: 467.99px) {
+  .footer-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 72px;
+  }
 }
 
+@media screen and (min-width: 768px) {
+  .footer-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+  }
+}
 .logo-dark-theme {
   font-family: var(--secondary-fons);
   color: var(--logo-color-studio-footer);
@@ -643,7 +650,6 @@ body {
 }
 .input-email-subscribe {
   display: block;
-
   width: 396px;
   height: 40px;
   font-size: 12px;
