--- a/styles/styles.css
+++ b/styles/styles.css
@@ -521,6 +521,7 @@ body {
 }
 @media screen and (min-width: 768px) {
   .customers-list {
+    max-width: 552px;
     column-gap: 24px;
     row-gap: 72px;
   }
@@ -531,6 +532,7 @@ body {
 @media screen and (min-width: 1200px) {
   .customers-list {
     column-gap: 24px;
+    max-width: 1128px;
   }
   .customers-item {
     flex-basis: calc((100% - 120px) / 6);
@@ -580,7 +582,7 @@ body {
   }
 }
 
-@media screen and (min-width: 768px), (max-width: 1199.99px) {
+@media screen and (min-width: 768px) {
   .footer-wrapper {
     max-width: 552px;
     padding: 0;
@@ -594,10 +596,11 @@ body {
 }
 @media screen and (min-width: 1200px) {
   .footer-wrapper {
-    width: 100%;
+    max-width: 1128px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    align-items: flex-start;
   }
 }
 .logo-dark-theme {
@@ -638,6 +641,7 @@ body {
 @media screen and (min-width: 1200px) {
   .footer-logo {
     align-items: flex-start;
+    margin-right: 120px;
   }
 }
 .footer-social-media {
@@ -1033,4 +1037,77 @@ body {
 .order-form-btn:focus {
   background-color: var(--background-btn);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+/* Mobile menu */
+.menu-toggle {
+  min-height: 40px;
+  min-width: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  border-radius: 50%;
+  outline: none;
+}
+@media (min-width: 768px) {
+  .menu-toggle {
+    display: none;
+  }
+}
+.menu-toggle:hover,
+.menu-toggle:focus {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+.menu-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 32px;
+  background-color: var(--primary-background);
+  z-index: 999;
+  transform: translateX(100%);
+  transition: transform 250ms ease-in-out;
+}
+.menu-container.is-open {
+  transform: translateX(0);
+}
+
+.menu-container .menu-toggle {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 40px;
+  right: 40px;
+
+  padding: 8px;
+  border-radius: 50%;
+  background: #e7e9fc;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  transition: background-color cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-close-btn:hover {
+  background-color: var(--background-btn);
+  fill: var(--icon-fill);
+}
+
+.menu-link .link {
+  display: block;
+}
+.mobile-menu {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+.mobile-menu {
+  padding: 10px;
+  color: #fff;
+  text-decoration: none;
 }
