--- a/styles/styles.css
+++ b/styles/styles.css
@@ -192,27 +192,115 @@ body {
   gap: 25px;
 }
 @media screen and (max-width: 767px) {
-  .nav {
-    display: none;
-  }
-  .contacts {
-    display: none;
-  }
-.navigation {
-  display: flex;
-  align-items: center;
-}
-
-.menu {
-  display: flex;
-  align-items: center;
-}
-@media screen and (max-width: 767px) {
   .menu {
     display: none;
   }
+  .contacts-list {
+    display: none;
+  }
 }
 
+@media screen and (min-width: 768px) {
+  .navigation {
+    display: flex;
+    align-items: center;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .menu {
+    display: flex;
+    align-items: center;
+  }
+}
+/*? MOBILE menu */
+.menu-toggle {
+  line-height: 0;
+}
+.menu-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  padding: 40px;
+  padding-top: 80px;
+  background-color: var(--primary-background);
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+  transform: translateX(100%);
+  transition: transform 250ms ease-in-out;
+}
+.menu-container.is-open {
+  transform: translateX(0);
+}
+.menu-container .menu-toggle {
+  position: absolute;
+  top: 40px;
+  right: 40px;
+  width: 24px;
+  height: 24px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background-color: #e7e9fc;
+  color: var(--text-black-color);
+  transition: background-color cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  padding-bottom: 284px;
+  margin-bottom: auto;
+}
+.modal-close-btn:hover {
+  background-color: var(--background-btn);
+  fill: var(--icon-fill);
+}
+
+.menu-mobile {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  margin-bottom: auto;
+}
+
+.menu-mobile .menu-link {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 40px;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+}
+.menu-link.menu-link-current {
+  color: #404bbf;
+}
+
+.contacts-list-mobile {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  margin-bottom: 48px;
+}
+.contact-link.current {
+  font-weight: 600;
+  font-size: 30px;
+  line-height: 40px;
+  color: #404bbf;
+}
+
+.social-list {
+  display: flex;
+  justify-content: space-between;
+  gap: 25px;
+}
 .menu-item:not(:last-child) {
   margin-right: 40px;
 }
@@ -1051,7 +1139,7 @@ body {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 /* Mobile menu */
-.menu-toggle {
+/* .menu-toggle {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -1145,4 +1233,4 @@ body {
   display: flex;
   justify-content: space-between;
   gap: 25px;
-}
+} */
