--- a/styles/styles.css
+++ b/styles/styles.css
@@ -136,6 +136,21 @@ body {
   margin-bottom: 72px;
 }
 
+@media screen and (max-width: 767px) {
+  .feature-item .section-subtitle {
+    text-align: center;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+  }
+}
+@media screen and (max-width: 1199px) {
+  .feature-item .section-subtitle {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+  }
+}
 .section-subtitle {
   font-weight: 500;
   font-size: 20px;
@@ -143,6 +158,12 @@ body {
   letter-spacing: 0.02em;
   color: var(--primary-text-color);
   margin-bottom: 8px;
+}
+
+@media screen and (max-width: 1199px) {
+  .feature-item .section-description {
+    font-weight: 500;
+  }
 }
 
 .section-description {
@@ -325,18 +346,24 @@ body {
 .menu-link.current {
   color: var(--menu-link-active-color);
 }
-.menu-link.current::after {
-  content: '';
-  position: absolute;
-  bottom: -9px;
 
-  display: block;
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background-color: var(--menu-link-active-color);
+@media screen and (min-width: 768px) {
+  .menu-link.current::after {
+    content: '';
+    position: absolute;
+    bottom: -24px;
+    display: block;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--menu-link-active-color);
+  }
 }
-
+@media screen and (min-width: 1200px) {
+  .menu-link.current::after {
+    bottom: -9px;
+  }
+}
 .contacts-list {
   display: flex;
   flex-direction: column;
@@ -857,10 +884,22 @@ body {
 
 /* Filters */
 
-.filter-list {
-  display: flex;
-  justify-content: center;
-  gap: 24px;
+@media screen and (max-width: 767px) {
+  .filter-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 24px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .filter-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 24px;
+  }
 }
 
 .model-btn-nav {
@@ -911,7 +950,7 @@ body {
     margin-right: auto;
   }
   .portfolio-item {
-    flex-basis: calc(100%-24px / 2);
+    flex-basis: calc((100% - 24px) / 2);
   }
 }
 
@@ -924,7 +963,7 @@ body {
     column-gap: 24px;
   }
   .portfolio-item {
-    flex-basis: calc(100%-48px\3);
+    flex-basis: calc((100% - 48px) / 3);
   }
 }
 /* .portfolio-item:not(:nth-child(3n)) {
