--- a/styles/styles.css
+++ b/styles/styles.css
@@ -545,6 +545,7 @@ body {
   .work-section-list {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     align-items: center;
     column-gap: 24px;
   }
