--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1049,10 +1049,10 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 101%;
   background-color: var(--accent-color);
   transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: var(--animation);
 }
 .txt-hover-img {
   padding: 40px 32px 0 32px;
