--- a/styles/styles.css
+++ b/styles/styles.css
@@ -120,7 +120,6 @@ button {
 }
 
 body {
-  padding-top: 74px;
   font-family: var(--primary-fons);
   font-size: 16px;
   color: var(--primary-text-color);
@@ -177,13 +176,9 @@ body {
 
 /* Header */
 .header {
-  position: fixed;
-  width: 100%;
-  top: 0;
-  z-index: 1;
   border-bottom: 1px solid var(--border-color);
-  padding-top: 24px;
-  padding-bottom: 24px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   /* max-height: 72px; */
   background-color: var(--primary-background);
 }
@@ -331,8 +326,8 @@ body {
 .menu-link,
 .contact-link {
   position: relative;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  /* padding-top: 20px;
+  padding-bottom: 20px; */
 }
 .menu-link {
   font-weight: 500;
@@ -396,6 +391,12 @@ body {
   color: var(--secondary-text-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media screen and (min-width: 468px) and (max-width: 1199px) {
+  .contact-link {
+    font-size: 12px;
+    line-height: 1.33;
+  }
+}
 
 .contact-link:hover,
 .contact-link:focus {
@@ -416,9 +417,8 @@ body {
 
 .hero {
   max-width: 1440px;
-  height: 600px;
-  padding-top: 188px;
-  padding-bottom: 188px;
+  padding-top: 112px;
+  padding-bottom: 112px;
   margin-left: auto;
   margin-right: auto;
   background-color: var(--secondary-background);
@@ -481,11 +481,15 @@ body {
     }
   }
 }
-
+@media screen and (min-width: 1200px) {
+  .hero {
+    padding-top: 188px;
+    padding-bottom: 188px;
+  }
+}
 .hero-title {
   width: 320px;
-
-  margin-bottom: 48px;
+  margin-bottom: 70px;
   margin-left: auto;
   margin-right: auto;
   font-size: 36px;
@@ -499,6 +503,12 @@ body {
     width: 496px;
     font-size: 56px;
     line-height: calc(60 / 56);
+    margin-bottom: 40px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .hero-title {
+    margin-bottom: 48px;
   }
 }
 .modal-btn {
@@ -527,10 +537,6 @@ body {
 }
 
 /* Features section */
-
-.features-section {
-  padding-bottom: 0;
-}
 
 .features-section-list {
   display: flex;
@@ -593,6 +599,7 @@ body {
 @media screen and (min-width: 1200px) {
   .work-section {
     display: block;
+    padding-top: 0;
   }
   .work-section-list {
     display: flex;
@@ -755,7 +762,8 @@ body {
     padding-bottom: 100px;
   }
 }
-@media screen and (min-width: 468px) {
+
+@media screen and (max-width: 468px) {
   .footer-wrapper {
     display: flex;
     flex-direction: column;
@@ -767,11 +775,10 @@ body {
 
 @media screen and (min-width: 768px) {
   .footer-wrapper {
-    max-width: 552px;
-    padding: 0;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+
+    margin-right: auto;
     flex-wrap: wrap;
     column-gap: 24px;
     row-gap: 72px;
@@ -779,7 +786,6 @@ body {
 }
 @media screen and (min-width: 1200px) {
   .footer-wrapper {
-    max-width: 1128px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -1094,7 +1100,6 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  overflow: scroll;
   width: 392px;
   height: 590px;
   padding: 72px 24px 24px 24px;
