--- a/styles/styles.css
+++ b/styles/styles.css
@@ -318,6 +318,7 @@ body {
 .social-list {
   display: flex;
   justify-content: space-between;
+  margin-right: auto;
   gap: 25px;
 }
 .menu-item:not(:last-child) {
@@ -416,7 +417,6 @@ body {
 /* Order Service section */
 
 .hero {
-  max-width: 1440px;
   padding-top: 112px;
   padding-bottom: 112px;
   margin-left: auto;
@@ -488,7 +488,6 @@ body {
   }
 }
 .hero-title {
-  width: 320px;
   margin-bottom: 70px;
   margin-left: auto;
   margin-right: auto;
@@ -497,16 +496,19 @@ body {
   text-align: center;
   letter-spacing: 0.02em;
   color: var(--hero-title-text-color);
+  text-transform: capitalize;
 }
+
 @media screen and (min-width: 768px) {
   .hero-title {
     width: 496px;
     font-size: 56px;
     line-height: calc(60 / 56);
     margin-bottom: 40px;
+    text-transform: none;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .hero-title {
     margin-bottom: 48px;
   }
@@ -545,9 +547,6 @@ body {
   justify-content: center;
   gap: 72px;
 }
-.feature-item {
-  width: 396px;
-}
 
 @media screen and (min-width: 768px) {
   .features-section-list {
@@ -583,7 +582,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 264px;
+
     height: 112px;
     margin-bottom: 8px;
     background-color: var(--features-list-icon-background);
@@ -634,7 +633,7 @@ body {
     row-gap: 64px;
   }
   .emploee-card {
-    flex-basis: calc((100%-48px) \2);
+    flex-basis: calc((100% - 48px) \2);
   }
 }
 
@@ -646,7 +645,7 @@ body {
     column-gap: 24px;
   }
   .emploee-card {
-    flex-basis: calc((100%-72px) \4);
+    flex-basis: calc((100% - 72px) \4);
   }
 }
 
@@ -691,7 +690,7 @@ body {
 .customers-list {
   display: flex;
   flex-wrap: wrap;
-  padding: 0;
+  justify-content: center;
   column-gap: 16px;
   row-gap: 72px;
   margin: auto;
@@ -700,32 +699,18 @@ body {
   flex-basis: calc((100% - 16px) / 2);
 }
 
-.customers-item {
-  width: 190px;
-}
-
-@media screen and (min-width: 768px) {
-  .customers-item {
-    width: 168px;
-  }
-}
 @media screen and (min-width: 768px) {
   .customers-list {
-    max-width: 552px;
     column-gap: 24px;
     row-gap: 72px;
   }
   .customers-item {
-    flex-basis: calc((100% - 48px) / 3);
+    flex-basis: 168px;
   }
 }
 @media screen and (min-width: 1200px) {
   .customers-list {
     column-gap: 24px;
-    max-width: 1128px;
-  }
-  .customers-item {
-    flex-basis: calc((100% - 120px) / 6);
   }
 }
 
@@ -736,7 +721,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 16px 32px;
   width: 100%;
   height: 88px;
   color: var(--customers-color);
@@ -903,7 +887,7 @@ body {
 
 .input-email-subscribe {
   display: block;
-  width: 396px;
+
   height: 40px;
   font-size: 12px;
   line-height: 2;
