--- a/styles/styles.css
+++ b/styles/styles.css
@@ -754,10 +754,30 @@ body {
   align-items: center;
   gap: 72px;
 }
-
 @media screen and (min-width: 1200px) {
   .footer-wrapper {
     display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+}
+.footer-conteiner {
+  display: flex;
+  flex-direction: column;
+  gap: 72px;
+}
+@media screen and (min-width: 768px) {
+  .footer-conteiner {
+    display: flex;
+    flex-direction: row;
+    gap: 24px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-wrapper {
+    display: flex;
+    align-items: flex-start;
   }
   .footer-conteiner {
     display: flex;
@@ -769,7 +789,11 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-bottom: 72px;
+}
+@media screen and (min-width: 768px) {
+  .footer-logo {
+    align-items: flex-start;
+  }
 }
 .logo-dark-theme {
   font-family: var(--secondary-fons);
@@ -795,7 +819,11 @@ body {
   letter-spacing: 0.02em;
   color: #ffffff;
 }
-
+@media screen and (min-width: 768px) {
+  .footer-title {
+    text-align: left;
+  }
+}
 .footer-social-list {
   display: flex;
   justify-content: center;
@@ -827,6 +855,16 @@ body {
   align-items: center;
   justify-content: center;
 }
+@media screen and (min-width: 768px) {
+  .footer-subscribe {
+    align-items: flex-start;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-subscribe {
+    margin-left: auto;
+  }
+}
 
 .footer-input-form {
   display: flex;
@@ -834,9 +872,16 @@ body {
   align-items: center;
   gap: 16px;
 }
+@media screen and (min-width: 768px) {
+  .footer-input-form {
+    display: flex;
+    flex-direction: row;
+    gap: 24px;
+  }
+}
+
 .input-email-subscribe {
   display: block;
-
   width: 264px;
   height: 40px;
   font-size: 12px;
