--- a/styles/styles.css
+++ b/styles/styles.css
@@ -773,6 +773,9 @@ body {
     flex-direction: row;
     gap: 24px;
   }
+  .fuck {
+    flex-basis: calc((100% - 264px) / 2);
+  }
 }
 @media screen and (min-width: 1200px) {
   .footer-wrapper {
