--- a/styles/styles.css
+++ b/styles/styles.css
@@ -177,12 +177,17 @@ body {
 /* Header */
 .header {
   border-bottom: 1px solid var(--border-color);
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding-top: 14px;
+  padding-bottom: 14px;
   /* max-height: 72px; */
   background-color: var(--primary-background);
 }
-
+@media screen and (min-width: 1200px) {
+  .header {
+    padding-top: 24px;
+    padding-bottom: 24px;
+  }
+}
 .page-header {
   display: flex;
   align-items: center;
@@ -350,7 +355,7 @@ body {
   .menu-link.current::after {
     content: '';
     position: absolute;
-    bottom: -24px;
+    bottom: -28px;
     display: block;
     width: 100%;
     height: 4px;
@@ -358,11 +363,7 @@ body {
     background-color: var(--menu-link-active-color);
   }
 }
-@media screen and (min-width: 1200px) {
-  .menu-link.current::after {
-    bottom: -9px;
-  }
-}
+
 .contacts-list {
   display: flex;
   flex-direction: column;
@@ -754,6 +755,11 @@ body {
   align-items: center;
   gap: 72px;
 }
+@media screen and (min-width: 768px) {
+  .footer-wrapper {
+    align-items: flex-start;
+  }
+}
 @media screen and (min-width: 1200px) {
   .footer-wrapper {
     display: flex;
@@ -772,9 +778,6 @@ body {
     display: flex;
     flex-direction: row;
     gap: 24px;
-  }
-  .fuck {
-    flex-basis: calc((100% - 264px) / 2);
   }
 }
 @media screen and (min-width: 1200px) {
